# Offline-Diary

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
Server/: Cargo.toml  db.sqlite3
Server/migrations/2021-02-17-044232_create_password/: up.sql
Server/migrations/2021-02-17-044259_create_users/: up.sql
Server/migrations/2021-02-17-044330_create_theme/: up.sql
Server/migrations/2021-02-17-044411_create_preferences/: up.sql
Server/migrations/2021-02-17-044445_create_mood/: up.sql
Server/migrations/2021-02-17-044546_create_person/: up.sql
Server/migrations/2021-02-17-044641_create_link/: up.sql
Server/migrations/2021-02-17-044649_create_mention/: up.sql
Server/migrations/2021-02-17-044726_create_nickname/: up.sql
Server/migrations/2021-02-17-044755_create_simp/: up.sql
Server/migrations/2021-02-17-044823_create_tags/: up.sql
Server/src/: apimodels.rs  lib.rs  main.rs  models.rs  schema.rs
Server/src/data/: actions.rs  mod.rs  models.rs  schema.rs
Server/src/handlers/: mod.rs  mood_handler.rs  password_handler.rs  themes_handler.rs  user_handler.rs
public/: index.html
src/: App.vue  app.d.ts  background.ts  main.ts  shims-tsx.d.ts
src/components/: Bread.vue  Crumbs.vue  HelloWorld.vue  Nav.vue
src/router/: index.ts
src/views/: About.vue  Entry.vue  Home.vue  Nicknames.vue
