[package]
name = "entryService"
version = "0.1.0"
authors = ["PierreStephaneVoltaire<psvoltaire96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
libsqlite3-sys = { version = "^0", features = ["bundled"] }
chrono = { version = "*", features = ["serde"] }
serde_ignored = "0.1.2"
serde_json = "^1.0"
serde = { version = "^1.0", features = ["derive"] }
diesel = { version = "^1.4.5", features = ["sqlite", "r2d2","numeric"] }
dotenv = "*"
env_logger = "0.8"
failure = "0.1.8"
futures = "0.3.1"
r2d2 = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
